Fix tests on windows
Closes #12442

Signed-off-by: Anton Klaren <anton.klaren@neotechnology.com>